welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:4: error: '=>' expected but 'return' found.
      case temp if temp < 60 return false
                             ^squirrelPlay:9: error: '=>' expected but 'return' found.
    	case temp if temp < 60 return false
                               ^