welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if (!isSummer){
    temp match{
      case temp if temp < 60 return false
      case temp if temp < 91 return true
      case _ => return false
    }
  } else temp match{
    	case temp if temp < 60 return false
      case temp if temp < 101 return true
      case _ => return false
  }}